@@ -1,3 +1,8 @@
+2010-12-25  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* gdb.threads/thread-specific.exp (get_thread_list): Update.
+	* gdb.threads/execl.exp: Update.
+
 2010-12-23  Yao Qi  <yao@codesourcery.com>
 
 	* gdb.arch/arm-disp-step.exp: New.
